--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,6 +8,6 @@
 <body>
   <app-navbar></app-navbar>
   <router-outlet></router-outlet>
- 
+  <app-accessibility></app-accessibility>
 </body>
 </html>
